Alternative QS tile display mode is not default anymore, only an option

--- a/app/src/minApi24/res/layout/activity_main.xml
+++ b/app/src/minApi24/res/layout/activity_main.xml
@@ -40,12 +40,20 @@
             android:id="@+id/textView_step_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_normal"
+            android:layout_marginBottom="@dimen/margin_large"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:contentDescription="@string/activity_main_step_1_img_content_desc"
             android:scaleType="centerCrop"
             android:src="@drawable/n_step_1" />
+
+        <Switch
+            android:id="@+id/mode_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_large"
+            android:text="@string/activity_main_switch_mode"
+            android:textColor="@android:color/white" />
 
         <!-- Action buttons -->
 
