--- a/app/src/minApi23/res/layout/activity_main.xml
+++ b/app/src/minApi23/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
                 android:layout_marginBottom="@dimen/margin_large"
                 android:gravity="center_horizontal"
                 android:text="@string/activity_main_title"
-                android:textColor="@android:color/white"
                 android:textSize="@dimen/activity_text_title_size"
                 android:textStyle="bold" />
 
@@ -57,8 +56,7 @@
                 android:layout_marginBottom="@dimen/margin_small"
                 android:layout_toEndOf="@id/textView_step_1"
                 android:text="@string/activity_main_step_1_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <Button
                 android:id="@+id/btn_copy_clipboard"
@@ -90,8 +88,7 @@
                 android:layout_marginBottom="@dimen/margin_small"
                 android:layout_toEndOf="@id/textView_step_2"
                 android:text="@string/activity_main_step_2_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <ImageView
                 android:id="@+id/textView_step_2_img"
@@ -127,8 +124,7 @@
                 android:layout_marginBottom="@dimen/margin_small"
                 android:layout_toEndOf="@id/textView_step_3"
                 android:text="@string/activity_main_step_3_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <Button
                 android:id="@+id/btn_open_settings"
@@ -160,8 +156,7 @@
                 android:layout_marginBottom="@dimen/margin_small"
                 android:layout_toEndOf="@id/textView_step_4"
                 android:text="@string/activity_main_step_4_1_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <ImageView
                 android:id="@+id/textView_step_4_1_img"
@@ -198,8 +193,7 @@
                 android:layout_marginBottom="@dimen/margin_large"
                 android:layout_toEndOf="@id/textView_step_4"
                 android:text="@string/activity_main_step_4_2_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <!-- Step 5 -->
 
@@ -222,8 +216,7 @@
                 android:layout_marginBottom="@dimen/margin_large"
                 android:layout_toEndOf="@id/textView_step_5"
                 android:text="@string/activity_main_step_end_content"
-                android:textAlignment="textStart"
-                android:textColor="@android:color/white" />
+                android:textAlignment="textStart" />
 
             <!-- Action buttons -->
 
